fix overflow on demo page

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,8 @@
 body, #__next {
     width: 100vw;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 body {
     margin: 0;
